add in a bin/rash.rb to help in testing

--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,6 @@ tramp
 /cookbooks
 
 # Bundler
-bin/*
 .bundle/*
 
 .kitchen/
@@ -191,3 +190,4 @@ cscope.po.out
 vendor/bundle
 vendor/cache
 Gemfile.lock
+repl.rb
